# hotspots

./: .clippy.toml  .dockerignore  .gitignore  .gitleaks.toml  .hotspotsrc.json  .rustfmt.toml  .trivyignore  AGENTS.md  AGENT_JSON_TASKS.md  ANALYSIS.md  ARCHITECTURE_TASKS.md  AUDIT_TASKS.md  CC_TASKS.md  CFG_ACCURACY_TASKS.md  CHANGELOG.md  CLAUDE.md  CODEBASE_IMPROVEMENTS.md  CONTRIBUTING.md  Cargo.toml  DIMENSIONS_TASKS.md  GITHUB_ACTION_SETUP_COMPLETE.md  HISTORY_TASKS.md  IDEAS.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_REPORT.md  IMPROVEMENTS_TASKS.md  JSX_TSX_IMPLEMENTATION.md  LICENSE-MIT  MULTI_LANGUAGE_ANALYSIS.md  Makefile  OUTPUT_TASKS.md  PROGRESS.md  PROJECT_STATUS.md  QUICK_START_REACT.md  README.md  RELEASE.md  RELEASE_PROCESS.md  RELEASING.md  ROADMAP.md  ROADMAP_SUMMARY.md  (+19 more)
.claude/commands/: respond-to-pr.md
.faultline/: index.json
.githooks/: pre-commit
.github/: CODEOWNERS  pull_request_template.md  release-template.md
.github/workflows/: cargo-release.yml  changelog.yml  ci.yml  deploy-docs.yml  docs-ci.yml  hotspots.yml  memory-test.yml  release.yml  security.yml  test-action.yml  test-comprehensive.yml
action/: .eslintrc.json  .github-workflow-example.yml  .gitignore  PUBLISHING.md  README.md  action.yml  package-lock.json  package.json
action/__tests__/: main.test.js
action/src/: main.ts
analysis/: Cargo.toml  README.md  index.html  lrs_timeline.vl.json  repo_distribution.vl.json  update-report.rs
benchmarks/: .gitignore  README.md  RESULTS.md  _run_corpus.py  bench.py  corpus.json  label.py  pyproject.toml  run.sh  score.py
benchmarks/memory-crash/: .gitignore  Dockerfile  benchmark-entrypoint.sh  run_baseline.py  run_local.py
benchmarks/memory-crash/configs/: kubernetes.json
benchmarks/versions/: v1.25.3.json  v1.26.0.json  v1.30.0.json
docs/: AI_INTEGRATION.md  ARCHITECTURE.md  CONTRIBUTING.md  FEATURE-SUMMARY.md  GIT_HISTORY_INTEGRATION_TASKS.md  LIVE_TESTING_GUIDE.md  PROJECT_STATE.md  README.md  REFERENCE.md  STAGED_FEATURES_REPORT.md  TASKS.md  TEST_RESULTS.md  USAGE.md  VERSIONING.md  architecture.md  capabilities-and-use-cases.md  design-decisions.md  diff-command.md  future-history-command.md  git-history-integration-summary.md  implementation-summary.md  index.md  invariants.md  json-schema.md  language-support.md  limitations.md  lrs-spec.md  metrics-calculation-and-rationale.md  mvp-implementation-history.md  package-lock.json  package.json  patterns.md  quickstart.md  roadmap.md  session-handoff-2026-02-08-terminology-update.md  suppression.md  synthetic-harness-research.md  test-summary.md  ts-support.md
docs/.internal/: DOCUMENTATION_CLEANUP_PLAN.md  burst-score-performance.md  tasks.md
docs/.vitepress/: config.js
docs/architecture/: ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  AUDIT_REPORT.md  IMPROVEMENTS.md  IMPROVEMENTS_SUMMARY.md  approximate-betweenness.md  index.md  invariants.md  multi-language.md  sqlite-pipeline-refactor.md  testing.md
docs/code-architecture/: change-guide.md  cli-and-action.md  core-modules.md  data-model.md  index.md  pipeline.md
docs/contributing/: adding-languages.md  development.md  index.md
docs/getting-started/: installation.md  quick-start-react.md  quick-start.md
docs/guide/: ci-cd.md  ci-integration.md  claude-code-integration.md  configuration.md  github-action.md  html-report-ux-improvements.md  output-formats.md  training.md  usage.md
docs/integrations/: ai-agents.md  ai-integration.md  mcp-server.md
docs/plans/: coordinate-function-level-scope.md  coordinate-status.md
docs/public/: CNAME
docs/reference/: cli.md  json-schema.md  language-support.md  limitations.md  lrs-spec.md  metrics.md  scoring-changelog.md  scoring.md
docs/requirements/: REQ-001-history-depth-tier.md  REQ-002-convention-bug-fix-feature.md  REQ-003-ranker-explanation-layer.md  REQ-004-public-benchmarks.md
docs/security/: supply-chain.md
examples/: export_visualization.rs
examples/ai-agents/: README.md  package.json  tsconfig.json
faultline-cli/: Cargo.toml  build.rs
faultline-cli/src/: main.rs
faultline-core/: Cargo.toml
hotspots-cli/: Cargo.toml  build.rs
hotspots-cli/src/: main.rs  util.rs
hotspots-cli/src/cmd/: analyze.rs  compact.rs  config.rs  coordinate.rs  diff.rs  init.rs  mod.rs  prune.rs  train.rs  trends.rs
hotspots-cli/src/output/: explain.rs  mod.rs  policy.rs
hotspots-core/: Cargo.toml
hotspots-core/src/: aggregates.rs  analysis.rs  ast.rs  callgraph.rs  cfg.rs  compact.rs  config.rs  coordinate.rs  coupling.rs  delta.rs  discover.rs  gate.rs  git.rs  history_signals.rs  html.rs  imports.rs  isolation_forest.rs  lib.rs  metrics.rs  models.rs  parser.rs  patterns.rs  phrases.rs  policy.rs  prune.rs  report.rs  risk.rs  sarif.rs  scoring.rs  snapshot.rs  suppression.rs  touch_cache.rs  trainer.rs  trends.rs
hotspots-core/src/cfg/: builder.rs  tests.rs
hotspots-core/src/db/: mod.rs
hotspots-core/src/discover/: tests.rs
hotspots-core/src/language/: cfg_builder.rs  ecmascript.rs  function_body.rs  mod.rs  parser.rs  span.rs  tree_sitter_utils.rs
hotspots-core/src/language/c/: cfg_builder.rs  mod.rs  parser.rs
hotspots-core/src/language/csharp/: cfg_builder.rs  mod.rs  parser.rs
hotspots-core/src/language/go/: cfg_builder.rs  mod.rs  parser.rs
hotspots-core/src/language/java/: cfg_builder.rs  mod.rs  parser.rs
hotspots-core/src/language/python/: cfg_builder.rs  mod.rs  parser.rs
hotspots-core/src/language/rust/: cfg_builder.rs  mod.rs  parser.rs
hotspots-core/src/parser/: tests.rs
hotspots-core/tests/: ci_invariant_tests.rs  coordinate_tests.rs  diff_tests.rs  git_history_tests.rs  golden_tests.rs  integration_tests.rs  jsx_parity_tests.rs  language_parity_tests.rs  suppression_tests.rs  trainer_tests.rs
integration/: README.md  test_cli_end_to_end.py  test_html_report.py  utils.py
schemas/: faultline-output.schema.json  function-report.schema.json  hotspots-output.schema.json  metrics.schema.json  policy-result.schema.json
scripts/: rss-watch.sh  run-tests.sh
visualizations/: README.md  data.json  index.html
(+162 files in other folders)
