[workspace]
members = ["faultline-core", "faultline-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = []

[workspace.lints.clippy]
# Enforce warnings as errors in workspace
style = "warn"
correctness = "warn"
complexity = "warn"
perf = "warn"
