[workspace]
members = ["hotspots-core", "hotspots-cli"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.75"
authors = ["Stephen Collins"]
license = "MIT"
repository = "https://github.com/Stephen-Collins-tech/hotspots"
homepage = "https://hotspots.dev"
keywords = ["typescript", "static-analysis", "complexity", "code-quality"]
categories = ["development-tools"]

[workspace.lints.clippy]
# Enforce warnings as errors in workspace
style = "warn"
correctness = "warn"
complexity = "warn"
perf = "warn"
