[package]
name = "faultline-cli"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }

[[bin]]
name = "faultline"
path = "src/main.rs"

[dependencies]
faultline-core = { path = "../faultline-core" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

[lints]
workspace = true
