[package]
name = "hotspots-cli"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
description = "Static analysis CLI for TypeScript, JavaScript, Go, Python, Rust, and Java that computes Local Risk Score (LRS)"
readme = "../README.md"

[[bin]]
name = "hotspots"
path = "src/main.rs"

[dependencies]
hotspots-core = { version = "1.8.0", path = "../hotspots-core" }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.17"

[lints]
workspace = true
