[package]
name = "hotspots-core"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
description = "Core library for TypeScript static analysis and Local Risk Score (LRS) computation"

[lib]
name = "hotspots_core"
path = "src/lib.rs"
doctest = false

[dependencies]
anyhow = "1.0"
globset = "0.4"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
swc_common = "18.0.1"
swc_ecma_ast = "20.0.0"
swc_ecma_parser = "33.0.0"
swc_ecma_visit = "20.0.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
tree-sitter = "0.25"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-python = "0.23"

[dev-dependencies]
tempfile = "3.8"
walkdir = "2.4"

[lints]
workspace = true
